--- a/src/components/massonry layout/massonry.css
+++ b/src/components/massonry layout/massonry.css
@@ -39,11 +39,15 @@
   }
 
   .box {
-	border: 2px solid rgb(212, 18, 18);
-	border-radius: 4px;
-	width: 70px;
+	width: 75px;
 	height: 100px;
 	margin: 10px 10px 10px 10px;
 	right: 0;
-	position: fixed;
+  position: fixed;
+
+  background: url(/dragToRemove.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 10;
 }
